# LabOS-Runtime

./: .env.example  .gitignore  LICENSE  README.md  install.bat  install.sh  logs.txt  pytest.ini  requirements.txt  run.bat  run.sh  start.sh  stop.bat  stop.sh  update_glasses.bat  update_glasses.sh
compose/: README.md  generate.py  runtime.j2
config/: .env.secrets.example  config.yaml  config.yaml.example
protocols/: phone_placement.txt  pilot_pcr.txt
robot/: Dockerfile  README.md  mcp_server.py  record_location.py  requirements.txt  robot_runtime.py  run.bat  run.sh  run_protocol.py
robot/aira/: protocol_runner.py  robot.py
robot/configs/: calibration_matrix.npy  dataset.yaml  distortion_coefficients.npy  handeye_calibration_data.json  handeye_calibration_result.json  intrinsics.txt  objects.yaml  tare.json  tool_transforms.npy  z_axis_calib.json
robot/protocols/: test.yaml  vortexing.yaml  wave.yaml
robot/scripts/: calibrate.py  capture.py  center_object.py  demo_vortex_nat_server.py  merge_coco.py  predict.py  record.py  test_camera.py  test_depth.py  test_handeye.py  test_vortex.py  (+2 more)
scripts/: configure.py  launcher.py  network_utils.py  test_models.py  update_glasses.py
tests/: conftest.py  test_dashboard_api.py  test_nat_workflow.py  test_status_manager.py  test_stt.py  test_wakeword.py  test_workflow.py  test_xr_audio.py
viture/: README.txt  sop_config.json
xr_runtime/: README.md
xr_runtime/streaming/: Dockerfile  README.md  audio_pusher.py  av_merger.py  pyproject.toml  requirements.txt  rtsp_pusher.py  rtsp_server.py  send_message.py
(+55 files in other folders)
